@@ -35,7 +35,6 @@
 ZEND_GET_MODULE(pdo_mysql)
 #endif
 
-#if PDO_USE_MYSQLND
 ZEND_DECLARE_MODULE_GLOBALS(pdo_mysql);
 
 #ifndef PHP_WIN32
@@ -59,7 +58,6 @@ PHP_INI_BEGIN()
 #endif
 PHP_INI_END()
 /* }}} */
-#endif
 
 /* true global environment */		
 		
@@ -67,9 +65,7 @@ PHP_INI_END()
  */
 static PHP_MINIT_FUNCTION(pdo_mysql)
 {
-#if PDO_USE_MYSQLND
 	REGISTER_INI_ENTRIES();
-#endif
 
 	REGISTER_PDO_CLASS_CONST_LONG("MYSQL_ATTR_USE_BUFFERED_QUERY", (long)PDO_MYSQL_ATTR_USE_BUFFERED_QUERY);
 	REGISTER_PDO_CLASS_CONST_LONG("MYSQL_ATTR_LOCAL_INFILE", (long)PDO_MYSQL_ATTR_LOCAL_INFILE);	
